# holz_smb_connector

./: .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
holz_smb_connector/: __init__.py  smb_connector.py
