[tool.poetry]
name = "holz-smb-connector"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "holz_smb_connector"}]

[tool.poetry.dependencies]
python = "^3.11"
pysmb = "^1.2.9.1"
pydantic-settings = "^2.0.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
